# eli

./: LICENSE  README.md  bumpver.toml  justfile  pyproject.toml
eli/: main.py
eli/genyai/: __init__.py  genai.py  schema.py
eli/settings/: main.py
