[tool.poetry]
name = "eli"
version = "0.1.0"
description = ""
authors = ["Hivan Mena <dev@madewithpython.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = {extras = ["all"], version = "^0.12.3"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
eli = "eli.main:main"

