[tool.poetry]
name = "eli"
version = "2024.7.1"
description = ""
authors = ["Hivan Mena <dev@madewithpython.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = {extras = ["all"], version = "^0.12.3"}
google-generativeai = "^0.7.1"
icecream = "^2.1.3"
pydantic-settings = "2.4.0"
StrEnum = "^0.4.7"
ruff = "0.5.5"
black = "^24.4.2"
isort = "^5.13.2"
textual = "^0.74.0"
textual-dev = "^1.5.1"
bumpver = "^2023.1129"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
eli = "eli.main:main"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
  )/
)
'''

[tool.isort]
# https://black.readthedocs.io/en/stable/compatible_configs.html#isort
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
lint.select = ["E", "F"]
lint.ignore = []
exclude = [".venv", "ops", "migrations"]
line-length = 120

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["A", "B", "C", "D", "E", "F"]
lint.unfixable = []